--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
                 </div>   
             </div>
         </section>
-    </header>    
+    </header> 
+
     <main>
+        <!-- section 1 -->
         <section>
-            <div class="main-row">
+            <div class="title-container">
                 <h2>Trova il piano business che fa per te</h2>
                 <input type="radio"> Fatturazione mensile
                 <input type="radio"> Fatturazione annuale
@@ -384,7 +386,7 @@
                     </div>
                 </div>
         </section>
-
+        <!-- section2 -->
         <section>
             <div class="main-row grey-border">
                 <div class="center">
@@ -408,7 +410,7 @@
 
         <!-- section 3 -->
         <section>
-            <div class="main-row row debug">
+            <div class="main-row row">
                 <div class="column column-img">
                    <img src="img (32)/img/partner.png" alt="">
                     
@@ -420,7 +422,58 @@
                 </div>
             </div>
         </section>
-        
+        <!-- section 4 -->
+        <section>
+            <div class="title-container">
+                <h2>Esegui piu operazioni con Dropbox Business</h2>
+            </div>
+                <div class="row main-row">
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-switching-tools.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-send-files-it.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-coordinate-it.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="row main-row">
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-integrations-it.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-multi-device.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column column-content">
+                        <img src="img (32)/img/business-feature-security.png" alt="">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Prestazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                </div>
+        </section>
+
+        <section>
+            <div class="title-container">
+                <h2>Piu di 500.000 utilizzano Drop-box Business</h2>
+                <a href="">Scopri di pi&uacute; sui nostri clienti</a>    
+            </div>
+        </section>
     </main>
 
     <footer>
