--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
                 <div class="nav-col">
                     <ul>
                         <li>
-                            <a href=""><img src="img (32)/img/logo-small.png" alt="Logo"></a>
+                            <a href="#"><img src="img (32)/img/logo-small.png" alt="Logo"></a>
                         </li>
 
                         <li>
-                            <a href="">Perche Dropbox</a>
+                            <a href="#">Perche Dropbox</a>
                         </li>
 
                         <li>
-                            <a href="">Funzioni</a>
+                            <a href="#">Funzioni</a>
                         </li>
 
                         <li>
-                            <a href="">Piani e prezzi</a>
+                            <a href="#">Piani e prezzi</a>
                         </li>
                     </ul>
                 </div>
@@ -38,24 +38,25 @@
                 <div class="nav-col nav-col-dx">
                     <ul>
                         <li>
-                            <a href="">Supporto</a>
+                            <a href="#">Supporto</a>
                         </li>
 
                         <li>
-                            <a href="">Contatta l'ufficio vendite</a>
+                            <a href="#">Contatta l'ufficio vendite</a>
                         </li>
 
                         <li>
-                            <a href="">Accedi</a>
+                            <a href="#">Accedi</a>
                         </li>
 
                         <li>
-                            <a href="">Inizia</a>
+                            <a href="#">Inizia</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <section class="bg-color">
 
             <div id="header-row">
@@ -67,7 +68,7 @@
                         </p>
                         <button>Inizia la tua prova gratuita</button>
                         <span>Annulla in qualsiasi momento</span>
-                        <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                        <a href="#opzioni"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
 
                     <div class="header-col-dx">
@@ -83,13 +84,13 @@
         <!-- section 1 -->
         <div class="center">
             <section class="margin">
-                <div class="medium-row display-left">
+                <div class="medium-row display-left" id="opzioni">
                     <h2>Trova il piano business che fa per te</h2>
                     <div class="input-margin">
-                        <input type="radio"> Fatturazione Mensile
+                        <input type="radio" name="fatturazione mensile-fatturazione annuale"> Fatturazione Mensile
                     </div>
                     <div class="input-margin">
-                        <input type="radio"> Fatturazione Annuale
+                        <input type="radio" name="fatturazione mensile-fatturazione annuale"> Fatturazione Annuale
                     </div>
                 </div>
                 <!-- Piano business -->
@@ -113,7 +114,7 @@
                                 </div>
                             </div>
 
-                            <div class="option-container ">
+                            <div class="option-container" >
                                 <div class="features-icons">
                                     <i class="fa-solid fa-folder"></i>
                                 </div>
@@ -503,7 +504,7 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi similique tenetur exercitationem voluptate, numquam harum qui. Nisi necessitatibus praesentium facilis quis, unde, tenetur odit repellat modi aliquam debitis minima voluptatum.
                     </div>
                     <hr>
-                    
+
                     <div class="question">
                         <h3>Qual &eacute; la differenza tra Dropbox Business standard e Dropbox Business Advanced</h3>
                         <i class="fa-solid fa-chevron-down"></i>  
