applicati colori e filtri a immagini svg

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
             <!-- sezione 5 -->
             <section class="margin">
-                <div class="medium-row gap">
+                <div class="medium-row">
                     <h2>Pi&uacute; di 500.000 team utilizzano Dropbox Business</h2>
                     <a href="">Scopri di pi&uacute; sui nostri clienti</a>
                 </div>
@@ -433,44 +433,55 @@
         </div>   
         <!-- section 6 -->
         <section>
-            <div class="large-row">
+            <div class="large-row large-row-gap">
                 <div class="container-col">
                     <div class="row-col-4">
-                        <div class="col-4">
+                        <div class="col-4" id="designit">
                             <img src="img (32)/img/designit.svg" alt="">
                         </div>
-                        <div class="col-4">
-                            <img src="img (32)/img/university_of_florida.svg" alt="">
+                        <div class="col-4" id="florida">
+                            <img  src="img (32)/img/university_of_florida.svg" alt="">
                         </div>
                     </div>
                     <div class="row-col-4">
-                        <div class="col-4">
+                        <div class="col-4" id="arizona">
                             <img src="img (32)/img/arizona_state_university.svg" alt="">
                         </div>
-                        <div class="col-4">
+                        <div class="col-4" id="topps">
                             <img src="img (32)/img/topps.svg" alt="">
                         </div>
                     </div>    
                 </div>
 
-                <div class="container-col">
+                <div class="container-col bg-col-text">
+                    <div id="container-col-text">
+                        <div class="title-header">
+                        <h2>Designit</h2>
+                        a <strong>wipro</strong> company
+                        </div>
+                        <div class="container-col-text-divider">
 
+                        </div>
+
+                        <p>"I membrii del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &eacute; fcile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &eacute; facile quanto Dropbox paper.</p>
+
+                    </div>
                 </div>
 
                 <div class="container-col">
                     <div class="row-col-4">
-                        <div class="col-4">
+                        <div class="col-4" id="bicycle">
                             <img src="img (32)/img/world_bicycle_relief.svg" alt="">
                         </div>
-                        <div class="col-4">
+                        <div class="col-4" id="planet">
                             <img src="img (32)/img/lonely_planet.svg" alt="">
                         </div>
                     </div>
                     <div class="row-col-4">
-                        <div class="col-4">
+                        <div class="col-4" id="corps">
                             <img src="img (32)/img/hearst_corp.svg" alt="">
                         </div>
-                        <div class="col-4">
+                        <div class="col-4" id="channel">
                             <img src="img (32)/img/clear_channel.svg" alt="">
                         </div>
                     </div>    
