--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
@@ -50,7 +50,7 @@
                         </li>
 
                         <li>
-                            <a href="#">Inizia</a>
+                            <a href="#"><button>Inizia</button></a>
                         </li>
                     </ul>
                 </div>
@@ -267,12 +267,14 @@
                         <div class="icon">
                             <i class="fa-solid fa-user"></i> Azienda
                         </div>
+
                         <div class="padding-left">
                             <div class="top-col type">
                                 <h3>Enterprise</h3>
                                 <span class="price">Contattaci</span>
                                 <span>-</span>
                             </div>
+
                             <div class="option-container gap">
                                 <div class="features-icons">
                                     <i class="fa-solid fa-user"></i>
@@ -351,6 +353,7 @@
                         <i class="fa-solid fa-user"></i> Team
                     </div>
                 </div>
+
                 <div class="medium-row border row-display-cx">
                     <div class="col-2 col-2-sx">
                         <h2>Enterprise</h2>
@@ -425,7 +428,7 @@
 
             <!-- sezione 5 -->
             <section class="margin">
-                <div class="medium-row">
+                <div class="medium-row gap">
                     <h2>Pi&uacute; di 500.000 team utilizzano Dropbox Business</h2>
                     <a href="">Scopri di pi&uacute; sui nostri clienti</a>
                 </div>
@@ -443,6 +446,7 @@
                             <img  src="img (32)/img/university_of_florida.svg" alt="">
                         </div>
                     </div>
+
                     <div class="row-col-4">
                         <div class="col-4" id="arizona">
                             <img src="img (32)/img/arizona_state_university.svg" alt="">
@@ -477,6 +481,7 @@
                             <img src="img (32)/img/lonely_planet.svg" alt="">
                         </div>
                     </div>
+
                     <div class="row-col-4">
                         <div class="col-4" id="corps">
                             <img src="img (32)/img/hearst_corp.svg" alt="">
@@ -540,144 +545,144 @@
     </main>
 
     <footer class="footer-bg-color">
-        <div id="display" class="footer-row">
-            <div class="footer-col">
-                <h2>Dropbox</h2>
-                <ul>
-                    <li>
-                        <a href="#">Applicazione desktop</a>
-                    </li>
+        <div class="footer-width">
+            <div id="footer-row">
+                <div class="footer-col-container">
+                    <div class="footer-col">
+                        <h2>Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
 
-                    <li>
-                        <a href="#">Perch&eacute; Dropbox</a>
-                    </li>
+                            <li>
+                                <a href="#">Perch&eacute; Dropbox</a>
+                            </li>
 
-                    <li>
-                        <a href="#">Piani</a>
-                    </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
 
-                    <li>
-                        <a href="#">Sicurezza</a>
-                    </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
 
-                    <li>
-                        <a href="#">Funzioni</a>
-                    </li>     
-                </ul>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>     
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h2>Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Perch&eacute; Dropbox</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>     
+                        </ul>
+                    </div>
+
+                    <div class="footer-col">
+                        <h2>Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Perch&eacute; Dropbox</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>     
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h2>Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Perch&eacute; Dropbox</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>     
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h2>Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Perch&eacute; Dropbox</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>     
+                        </ul>
+                    </div>
+                    
+                </div>
+
+                <div class="footer-divider">
+
+                </div>
+
+                <div class="footer-icon">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <span>Italiano</span>
+                    <i class="fa-solid fa-caret-up"></i>
+                </div>
             </div>
-
-            <div class="footer-col">
-                <h2>Prodotti</h2>
-                <ul>
-                    <li>
-                        <a href="#">Applicazione desktop</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Perch&eacute; Dropbox</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Piani</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Sicurezza</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Funzioni</a>
-                    </li>     
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h2>Azienda</h2>
-                <ul>
-                    <li>
-                        <a href="#">Applicazione desktop</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Perch&eacute; Dropbox</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Piani</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Sicurezza</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Funzioni</a>
-                    </li>     
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h2>Supporto</h2>
-                <ul>
-                    <li>
-                        <a href="#">Applicazione desktop</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Perch&eacute; Dropbox</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Piani</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Sicurezza</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Funzioni</a>
-                    </li>     
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h2>Comunity</h2>
-                <ul>
-                    <li>
-                        <a href="#">Applicazione desktop</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Perch&eacute; Dropbox</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Piani</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Sicurezza</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Funzioni</a>
-                    </li>     
-                </ul>
-            </div>
-        </div>
-
-        <div class="footer-row">
-
-            <div class="footer-divider">
-            
-            </div>
-            <div class="footer-icon">
-                <i class="fa-solid fa-earth-americas"></i>
-                <span>Italiano</span>
-                 <i class="fa-solid fa-caret-up"></i>
-             </div>
-        </div>
+        </div>    
     </footer>
 </body>
 </html>
