header ricostruito / esercizio completato

--- a/index.html
+++ b/index.html
@@ -58,23 +58,22 @@
         </nav>
 
         <section class="bg-color">
-
-            <div id="header-row">
+            <div class="section-container pt-150">
                 <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
-                <div id="header-col">
-                    <div class="header-col-sx">
-                        <p>
-                           Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business &egrave; pi&uacute; di uno spazio di archiviazione sicuro: &eacute; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
-                        </p>
-                        <button>Inizia la tua prova gratuita</button>
-                        <span>Annulla in qualsiasi momento</span>
-                        <a href="#opzioni"><i class="fa-solid fa-arrow-down"></i></a>
-                    </div>
 
-                    <div class="header-col-dx">
+                <div id="header-row" class="pt-40">
+                    <div id="col-sx">
+                        <p id="paragrafo-header">
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business &egrave; pi&uacute; di uno spazio di archiviazione sicuro: &eacute; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                         </p>
+                         <button class="mb-mt-30">Inizia la tua prova gratuita</button>
+                         <span>Annulla in qualsiasi momento</span>
+                         <a href="#opzioni"><i class="fa-solid fa-arrow-down"></i></a>
+                    </div>
+                    <div id="col-dx">
                         <img src="img (32)/img/jumbo.png" alt="">
                     </div>
-                </div>   
+                </div>
             </div>
         </section>
     </header> 
@@ -102,7 +101,7 @@
                         <div class="padding-left">
                             <div class="top-col type">
                                 <h3>Professional</h3>
-                                <span class="price">&euro; 12.00</span>
+                                <span class="price"><strong>&euro; 12.00</strong></span>
                                 <span>/mese</span>
                             </div>
                             <div class="option-container gap">
@@ -172,7 +171,7 @@
                         <div class="padding-left">
                             <div class="top-col type">
                                 <h3>Advance</h3>
-                                <span class="price">&euro; 18.00</span>
+                                <span class="price"><strong>&euro; 18.00</strong></span>
                                 <span>/utente/mese</span>
                             </div>
                             <div class="option-container gap">
@@ -271,7 +270,7 @@
                         <div class="padding-left">
                             <div class="top-col type">
                                 <h3>Enterprise</h3>
-                                <span class="price">Contattaci</span>
+                                <span class="price"><strong>Contattaci</strong></span>
                                 <span>-</span>
                             </div>
 
@@ -460,15 +459,17 @@
                 <div class="container-col bg-col-text">
                     <div id="container-col-text">
                         <div class="title-header">
-                        <h2>Designit</h2>
-                        a <strong>wipro</strong> company
+                            <h2>Designit</h2>
+                            <span>&#174;</span>
                         </div>
+                        <span><strong>wipro</strong> company</span> 
                         <div class="container-col-text-divider">
 
                         </div>
 
                         <p>"I membrii del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &eacute; fcile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &eacute; facile quanto Dropbox paper.</p>
 
+                        <span>Morten Thompsen, Global IT Leader</span>
                     </div>
                 </div>
 
@@ -684,5 +685,9 @@
             </div>
         </div>    
     </footer>
+
+
+
+
 </body>
 </html>
