collocazione immagini cambiato e img alt aggiunti

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="nav-col">
                     <ul>
                         <li>
-                            <a href="#"><img src="img (32)/img/logo-small.png" alt="Logo"></a>
+                            <a href="#"><img src="img/logo-small.png" alt="Logo"></a>
                         </li>
 
                         <li>
@@ -71,7 +71,7 @@
                          <a href="#opzioni"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <div id="col-dx">
-                        <img src="img (32)/img/jumbo.png" alt="">
+                        <img src="img/jumbo.png" alt="">
                     </div>
                 </div>
             </div>
@@ -371,7 +371,7 @@
             <section class="margin">
                 <div class="medium-row row-display-cx">
                     <div class="col-2 col-2-img">
-                        <img src="img (32)/img/partner.png" alt="Partner">
+                        <img src="img/partner.png" alt="Partner">
                     </div>
 
                     <div class="col-2 col-2-text">
@@ -386,19 +386,19 @@
             <section class="margin">
                 <div class="medium-row row-display-sb">
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-switching-tools.png" alt="">
+                        <img src="img/business-feature-switching-tools.png" alt="tools feature">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
 
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-send-files-it.png" alt="">
+                        <img src="img/business-feature-send-files-it.png" alt="business feature">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
 
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-coordinate-it.png" alt="">
+                        <img src="img/business-feature-coordinate-it.png" alt="feature cordinate">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
@@ -406,19 +406,19 @@
 
                 <div class="medium-row row-display-sb gap">
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-integrations-it.png" alt="">
+                        <img src="img/business-feature-integrations-it.png" alt="features integration">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
 
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-multi-device.png" alt="">
+                        <img src="img/business-feature-multi-device.png" alt="multi device">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
 
                     <div class="col-3">
-                        <img src="img (32)/img/business-feature-security.png" alt="">
+                        <img src="img/business-feature-security.png" alt="feature security">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                     </div>
@@ -439,19 +439,19 @@
                 <div class="container-col">
                     <div class="row-col-4">
                         <div class="col-4" id="designit">
-                            <img src="img (32)/img/designit.svg" alt="">
+                            <img src="img/designit.svg" alt="designit">
                         </div>
                         <div class="col-4" id="florida">
-                            <img  src="img (32)/img/university_of_florida.svg" alt="">
+                            <img  src="img/university_of_florida.svg" alt="florida university">
                         </div>
                     </div>
 
                     <div class="row-col-4">
                         <div class="col-4" id="arizona">
-                            <img src="img (32)/img/arizona_state_university.svg" alt="">
+                            <img src="img/arizona_state_university.svg" alt="arizone university">
                         </div>
                         <div class="col-4" id="topps">
-                            <img src="img (32)/img/topps.svg" alt="">
+                            <img src="img/topps.svg" alt="topps">
                         </div>
                     </div>    
                 </div>
@@ -476,19 +476,19 @@
                 <div class="container-col">
                     <div class="row-col-4">
                         <div class="col-4" id="bicycle">
-                            <img src="img (32)/img/world_bicycle_relief.svg" alt="">
+                            <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
                         </div>
                         <div class="col-4" id="planet">
-                            <img src="img (32)/img/lonely_planet.svg" alt="">
+                            <img src="img/lonely_planet.svg" alt="lonely planet">
                         </div>
                     </div>
 
                     <div class="row-col-4">
                         <div class="col-4" id="corps">
-                            <img src="img (32)/img/hearst_corp.svg" alt="">
+                            <img src="img/hearst_corp.svg" alt="hearts corporation">
                         </div>
                         <div class="col-4" id="channel">
-                            <img src="img (32)/img/clear_channel.svg" alt="">
+                            <img src="img/clear_channel.svg" alt="clear channel">
                         </div>
                     </div>    
                 </div>
